crates/amaru-observability/macros/tests/ui/compile_fail/trace_span_wrong_type.stderr
error[E0308]: mismatched types
  --> tests/ui/compile_fail/trace_span_wrong_type.rs:29:17
   |
17 | / define_local_schemas! {
18 | |     test {
19 | |         sub {
20 | |             /// Test schema for wrong trace_span field type
...  |
26 | | }
   | |_- arguments to this function are incorrect
...
29 |       let _span = trace_span!(test::sub::SCHEMA, first = "nah");
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&u64`, found `&&str`
   |
   = note: expected reference `&u64`
              found reference `&&str`
note: closure parameter defined here
  --> tests/ui/compile_fail/trace_span_wrong_type.rs:17:1
   |
17 | / define_local_schemas! {
18 | |     test {
19 | |         sub {
20 | |             /// Test schema for wrong trace_span field type
...  |
26 | | }
   | |_^
...
29 |       let _span = trace_span!(test::sub::SCHEMA, first = "nah");
   |                   --------------------------------------------- in this macro invocation
   = note: this error originates in the macro `trace_span` (in Nightly builds, run with -Z macro-backtrace for more info)
